<resources>
    <string name="app_name">NavigationDrawerDemo</string>
    <string name="android_text">Android</string>
    <string name="imagem_menu_lateral">Imagem menu</string>
    <string name="menu_item_1">Item 1</string>
    <string name="menu_item_2">Item 2</string>
    <string name="menu_item_3">Item 3</string>
    <string name="menu_item_4">Item 4</string>
    <string name="menu_item_5">Item 5</string>
    <string name="menu_item_6">Item 6</string>
    <string name="titulo_1">Titulo 1</string>
    <string name="menu_item_7">Item 7</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>
    <string name="menu_4">Menu 4</string>
    <string name="menu_default">Menu Default</string>
</resources>
